# ctrlpilot_mavlinkbridge_ros

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
config/: sealien_mavlink_rov.yaml  sealien_mavlink_tms.yaml
docs/: rov_mavlink_bridge_user_manual.md  rov_mavlink_comm_quality_report_20260623.md  rov_mavlink_comm_quality_report_20260625.md  rov_mavlink_comm_test_case.md  rov_mavlink_ep101_comm_quality_report_20260625.md  rov_mavlink_ep102_comm_quality_report_20260624.md  rov_mavlink_ep102_comm_quality_report_20260625.md  rov_mavlink_ep103_comm_quality_report_20260625.md  rov_mavlink_long_comm_quality_report_20260630.md  数据采集板通信协议1.5.xlsx
include/sealien_ctrlpilot_mavlinkbridge/: mavlink_bridge_core.hpp
launch/: rov_mavlink_test.launch.py
lib/v2.0/sealien_mavlink/: mavlink.h  mavlink_msg_bem280.h  mavlink_msg_depth_status.h  mavlink_msg_dvl_data.h  mavlink_msg_gs_cfg.h  mavlink_msg_gs_cmd.h  mavlink_msg_gs_status.h  mavlink_msg_heartbeat.h  mavlink_msg_height_status.h  mavlink_msg_imu_calib.h  mavlink_msg_imu_clear.h  mavlink_msg_imu_data.h  mavlink_msg_led_cmd.h  mavlink_msg_led_status.h  mavlink_msg_mixed_io_cmd.h  mavlink_msg_mixed_io_data.h  mavlink_msg_switch_cmd.h  mavlink_msg_switch_status.h  mavlink_msg_thruster_cmd.h  mavlink_msg_thruster_lock.h  mavlink_msg_thruster_status.h  mavlink_msg_valve_cmd.h  mavlink_msg_valve_status.h  mavlink_msg_vcheck.h  sealien_mavlink.h  testsuite.h  version.h
scripts/: start_rov_mavlink_long_test.sh  start_rov_mavlink_test.sh
src/: mavlink_bridge_core.cpp  rov_mavlink_node.cpp  rov_mavlink_test_node.cpp  tms_mavlink_node.cpp
tools/: README.md  generate_mavlink.sh  sealien_mavlink.xml
